--- a/Mobile_App/MyApplication/app/src/main/res/values/strings.xml
+++ b/Mobile_App/MyApplication/app/src/main/res/values/strings.xml
@@ -15,4 +15,6 @@
     <string name="permission_rationale">"Contacts permissions are needed for providing email
         completions."
     </string>
+    <string name="title_activity_search_maps">Map</string>
+    <string name="title_activity_search__destination_">Map</string>
 </resources>
